# Fata

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 0_hello_world.c  1_render_surface.c  fata.h  native-lib.cpp  testgles.c  tutorial01.cpp  tutorial02.c  tutorial02.cpp  tutorial03.c  tutorial03.cpp  tutorial04.c  tutorial04.cpp  tutorial05.cpp  tutorial06.c  tutorial06.cpp
app/src/main/java/com/bakaoh/fata/: MainActivity.java  NativeHelper.java  NativeRenderActivity.java  TestSDLActivity.java  Tutorial02Activity.java  Tutorial03Activity.java  TutorialActivity.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/jniLibs/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc
app/src/main/res/layout/: activity_main.xml  activity_native_render.xml
app/src/main/res/values/: strings.xml
distribution/armeabi-v7a/lib/pkgconfig/: libswresample.pc  libswscale.pc
gradle/wrapper/: gradle-wrapper.properties
